CodeJB/log/err_2.txt
Info in <TUnixSystem::ACLiC>: creating shared library /home/smjoblan/iTHEPHY/iTHEPHY/CodeJB/./data_cc.so
In file included from input_line_11:6:
././data.cc:43:10: error: no member named 'SetRangeUser' in 'TH1F'
  h_pos->SetRangeUser(-0.1, 0.1, "Y");
  ~~~~~  ^
Error in <ACLiC>: Dictionary generation failed!
